[package]
name = "sentinelone"
version = "0.1.2"
edition = "2021"
description = "A Rust API wrapper for SentinelOne XDR and Console APIs"
authors = ["Ayaal Ali <ayaalali@proton.me>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
async-trait = "0.1"
